--- a/S4M/S4M.Core/S4M.Core.csproj
+++ b/S4M/S4M.Core/S4M.Core.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Optional" Version="4.0.0" />
+    </ItemGroup>
+
 </Project>
