--- a/S4M/S4M.Core/S4M.Core.csproj
+++ b/S4M/S4M.Core/S4M.Core.csproj
@@ -1,7 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <Authors>Philip Laureano</Authors>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <PackageId>Laureano.S4M.Core</PackageId>
+        <Product>Laureano.S4M.Core</Product>
+        <Title>S4M</Title>
+        <Description>A Short, Simple, and Straightforward State (S4) Machine Library for .NET</Description>
+        <Copyright>Copyright (C) Philip Laureano 2021</Copyright>
+        <PackageProjectUrl>https://github.com/philiplaureano/S4M</PackageProjectUrl>
+        <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+        <PackageTags>fsm finitestatemachines</PackageTags>
+        <RepositoryUrl>https://github.com/philiplaureano/S4M</RepositoryUrl>
+        <Version>1.0.0</Version>
+        <AssemblyVersion>$(Version)</AssemblyVersion>
+        <FileVersion>$(Version)</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
