--- a/S4M/S4M.Core/S4M.Core.csproj
+++ b/S4M/S4M.Core/S4M.Core.csproj
@@ -12,9 +12,10 @@
         <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
         <PackageTags>fsm finitestatemachines</PackageTags>
         <RepositoryUrl>https://github.com/philiplaureano/S4M</RepositoryUrl>
-        <Version>1.0.2</Version>
+        <Version>1.0.3</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <FileVersion>$(Version)</FileVersion>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
